--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 <head>
-<title>Task Management System Privacy Policy</title>
+<title>Privacy Policy</title>
 </head>
 
 <body>
 <h1>Privacy Policy</h1>
 
-<p>Last Updated: June 8, 2020
+<p>Last Updated: May 10, 2021
 
 <p>This Privacy Policy explains how information about you is collected, used 
   and disclosed by em_te ("us", "we", "our"). This Privacy Policy
